xatolar to'g'irlandi

--- a/page_jasurbek/styles_j/main_j.css
+++ b/page_jasurbek/styles_j/main_j.css
@@ -25,11 +25,8 @@ body {
 /* header start */
 
 .header {
-  width: 100%;
-  position: fixed;
-  top: 0;
-  right: 0;
-  z-index: 99999;
+  width: 1400px;
+  margin: 0 auto;
 }
 .header_list {
   width: 100%;
